--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.simpleweather"
+        applicationId "tech.aanpatel.simpleweather"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
